* Adds emphasis * Fix happy bdays title typo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happ Birthdays 2018</title>
+    <title>Happy Birthdays 2018</title>
 
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
@@ -17,6 +17,11 @@
 
       #cheers {
         height: 50px;
+      }
+
+      .emphasis {
+        font-weight: bold;
+        font-size: 25px;
       }
 
       #beerdrip img, #petris img, #dinos img {
@@ -111,7 +116,7 @@
   </span>
 
   <div id="intro2">
-    That’s right, it is a party for our birthdays but we are giving you a gift* - the gift of knowledge. Knowledge that can only be gained by a night of sampling many many delicious beers.  There will be so many beers that in order to keep them all cold we will be filling up a bathtub with ice. There will also be awesome people and some snacks and two very adorable dogs. 
+    That’s right, it is a party for our birthdays but we are giving you a gift <span class="emphasis">*</span> - <span class="emphasis">the gift of knowledge</span>. Knowledge that can only be gained by a night of sampling many many delicious beers.  There will be so many beers that in order to keep them all cold we will be filling up a bathtub with ice. There will also be awesome people and some snacks and two very adorable dogs. 
   </div>
 
   <span id="beerdrip">
@@ -131,7 +136,7 @@
   </span>
 
   <div id="fine-print">
-    *Of course this does not preclude you bringing one or both of us a gift :) Neither of us have registered anywhere, all gifts from birthday cards to paying our rent for this month works for us. Just know however, that the number of beers allotted will be proportionate to the number of gifts you bring (:
+    <span class="emphasis">*</span>Of course this does not preclude you bringing one or both of us a gift :) Neither of us have registered anywhere, all gifts from birthday cards to paying our rent for this month works for us. Just know however, that the number of beers allotted will be proportionate to the number of gifts you bring (:
   </div>
 
   <script>
