--- a/index.html
+++ b/index.html
@@ -146,20 +146,25 @@
   <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
 
   <script>
-      function onSignIn(googleUser) {
-        // Useful data for your client-side scripts:
-        var profile = googleUser.getBasicProfile();
-        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-        console.log('Full Name: ' + profile.getName());
-        console.log('Given Name: ' + profile.getGivenName());
-        console.log('Family Name: ' + profile.getFamilyName());
-        console.log("Image URL: " + profile.getImageUrl());
-        console.log("Email: " + profile.getEmail());
-
-        // The ID token you need to pass to your backend:
-        var id_token = googleUser.getAuthResponse().id_token;
-        console.log("ID Token: " + id_token);
+    function onSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      var profId = profile.getId();
+      var name = profile.getName();
+      var email = profile.getEmail();
+      var data = {
+        profId: profId,
+        name: name,
+        email: email
       };
+
+      fetch("http://73.93.142.99:5000/rsvp/add", {
+        method: "POST",
+        body: JSON.stringify(data)
+      })
+      .catch(function(error) {
+        console.error(error);
+      });
+    };
 
     function addGif(id, src, total) {
       Array(total).fill(0).forEach(function() {
