--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         email: email
       };
 
-      fetch("http://73.93.142.99:5000/rsvp/add", {
+      fetch("https://73.93.142.99:5000/rsvp/add", {
         method: "POST",
         body: JSON.stringify(data)
       })
